--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,7 @@
 		
 		{% include 'nav.html'%}
 
+		{% block statusbar %} {% endblock %}
 
 		{% if messages %}
 			<section class="section mt-2 mb-2 pt-2 pb-2">
