--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -5,7 +5,7 @@
 {% block statusbar %} 
 	<div class="r-text-center has-background-black has-text-white">
 		<p class="r-wrap-text">
-			NOU &nbsp|&nbsp Vezi <a href="#" class="r-bold r-underline">topul facultatilor</a> din Romania
+			NOU &nbsp|&nbsp Vezi <a href="{% url 'school:school_ranking' %}" class="r-bold r-underline">topul facultatilor</a> din Romania
 		</p>
 	</div>
 {% endblock %}
