--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -4,7 +4,7 @@
 
 {% block statusbar %} 
 	<div class="r-text-center has-background-black has-text-white">
-		<p class="r-wrap-text">
+		<p class="r-wrap-text r-center-content">
 			NOU &nbsp|&nbsp Vezi <a href="{% url 'school:school_ranking' %}" class="r-bold r-underline">topul facultatilor</a> din Romania
 		</p>
 	</div>
