--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
 
 <html>
 	<head>
+
+		<link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
 		<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="3667ec18-b7ab-435a-9698-7527d4f844cf" data-blockingmode="auto" type="text/javascript"></script>
 		
 		<meta charset="utf-8">
